Fix black icons on vehicle modal when in dark mode

--- a/WheeluFront/src/modals/VehicleModal/VehicleModal.module.css
+++ b/WheeluFront/src/modals/VehicleModal/VehicleModal.module.css
@@ -43,6 +43,10 @@
 	font-size: 0.85em;
 }
 
+.VehiclePart.DarkMode img {
+	filter: invert(1);
+}
+
 .CategoriesWidget {
 	width: 208px;
     margin: auto;
